--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -32,9 +32,10 @@ body
                         h1 #{'{{ .Title }}'}
                         span #{'{{.Content}}'}
                     h5.text-left
-                      | !{' {{if .PrevInSection}} '}
-                      a(href='{{.PrevInSection.Permalink}}') Next: #{' {{.PrevInSection.Title }} '}
-                      | !{'{{end}}'}
+                      span
+                        | !{' {{if .PrevInSection}} '}
+                        a(href='{{.PrevInSection.Permalink}}') Next: #{'{{.PrevInSection.Title }} '}
+                        | !{'{{end}}'}
                     hr.my-4
                     include ../partials/last-updated.pug
 include ../partials/footer.pug
