--- a/src/layouts/partials/blog-meta-data.pug
+++ b/src/layouts/partials/blog-meta-data.pug
@@ -5,8 +5,8 @@
     .blog-meta-data-published-date !{'{{ .PublishDate.Format "January 2, 2006" }}'} · !{'{{ .ReadingTime }}'} min read
   .blog-meta-data-tags
     | !{'{{ if .Params.tags }}'}
-    ul.badges.d-inline.ml-md-3.ml-sm-3.pl-0
+    .badges.d-inline.ml-md-3.ml-sm-3.pl-0
       | !{'{{ range .Params.tags }}'}
-      li.badge.badge-default.mb-md-0.mb-2.mr-2 !{'{{ . }}'}
+      .badge.badge-default.mb-md-0.mb-2.mr-2 !{'{{ . }}'}
       | !{'{{ end }}'}
     | !{'{{ end }}'}
