style: tweak headers hierarchy

--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -2,7 +2,7 @@ section.all-features-section
   .container
     .row.mb-lg-5.mb-3
       .col-sm-12.text-center
-        h3.section-header All features at a glances
+        h2.section-header All features at a glance
     .row
       .col-sm-4
         h5 API monitoring
