--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -142,6 +142,7 @@
           color: $gray-dark;
           text-transform: uppercase;
           font-size: $font-size-xs;
+          font-family: 'fakt-soft', sans-serif;
         }
       }
     }
