feat: add companies

--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -8,6 +8,7 @@ body.fixed-top-padding
             include partials/site-monitoring-section.pug
             include partials/alerting-section.pug
             include partials/results-section.pug
+            include partials/trusted-by-section.pug
             include partials/testimonial-trial-row.pug
             include partials/all-features.pug
             include partials/tweets.pug
