--- a/src/layouts/partials/public-stats-section.pug
+++ b/src/layouts/partials/public-stats-section.pug
@@ -6,4 +6,4 @@ section.public-stats-section
           span.counter(id='api-check-results')
           | API checks and
           span.counter(id='browser-check-results')
-          | Browser checks with 💖
+          | browser checks with 💖
