--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -102,5 +102,6 @@ body
                     .col-sm-6.markdown.text-left #{'{{ . | markdownify }}'}
                     | !{'{{end}}'}
 
+    include ../partials/trusted-by-section.pug
     include ../partials/testimonial-trial-row.pug
     include ../partials/footer.pug
