--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@
 @import 'sections/testimonials';
 @import 'sections/public-stats';
 @import 'sections/faq';
+@import 'sections/trusted-by';
 
 
 body {
