--- a/src/scss/sections/_alerting.scss
+++ b/src/scss/sections/_alerting.scss
@@ -4,6 +4,11 @@
   padding-top: 4 * $section-top-padding;
   padding-bottom: $section-bottom-padding;
 
+  background-image: url('/images/css/bowed_inv_bg2.svg');
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: contain;
+
   height: 880px;
   overflow: hidden;
 
