--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -1,6 +1,6 @@
 .testimonial-section {
 
-  padding-top: 3 * $section-top-padding;
+  padding-top: $section-top-padding;
   padding-bottom: 2 * $section-bottom-padding;
 
   &.testimonial-1 {
