--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 @import 'blog';
 @import 'product';
 @import 'promo-banner';
+@import 'social-share';
 
 @import 'sections/hero';
 @import 'sections/api-monitoring';
