--- a/src/layouts/partials/trusted-by-section.pug
+++ b/src/layouts/partials/trusted-by-section.pug
@@ -2,8 +2,7 @@ section.trusted-by-section
   .container
     .row
       .col-sm-12.col-lg-10.offset-lg-1
-        h3.section-header.mb-4 Trusted by great companies like
+        h5.section-super-header.mb-3 Trusted by great companies like
     .row
-      .col-sm-12.col-lg-8.offset-lg-2
-        img.trusted-by-image(src='/images/testimonials/customer_logos_horizontal_1.png', alt='trusted by companies')
-
+      .col-sm-12
+        img.trusted-by-image(src='/images/testimonials/customer_logos_horizontal_1@2x.png', alt='trusted by companies for api and browser transaction monitoring')
