--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -1,6 +1,6 @@
 @import 'variables.scss';
 .product {
-  $product-max-width: 700px;
+  $product-max-width: 760px;
 
   &.markdown {
 
@@ -17,15 +17,20 @@
 
     h2 {
       &.section-header {
-        font-size: 1.75rem;
+        font-size: 2.5rem;
         border-bottom: none;
       }
     }
 
     h3 {
-      font-size: 2rem;
-      margin-top: 0;
-      border-bottom: 0;
+      &.section-header {
+        font-size: 1.5rem;
+        margin-top: 0;
+        border-bottom: 0;
+      }
+      &::before {
+        content: none !important;
+      }
     }
 
     h5 {
