style: adds new alerting tweaks

--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -21,8 +21,8 @@ section.all-features-section
         h5 Alerting channels
         p Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, email, web hook and Slack alerting integrations.
       .col-sm-4
-        h5 Double check by default
-        p The internet can be glitchy. When a check fails, we always run it again just to be sure.
+        h5 Threshold alerting
+        p Control what <a href='/docs/alerting/' class="info-link">triggers alerts</a> and set reminders. We always run double checks to combat false positives.
     .row
       .col-sm-4
         h5 Public dashboards
