--- a/src/layouts/partials/alerting-section.pug
+++ b/src/layouts/partials/alerting-section.pug
@@ -8,9 +8,9 @@ section.alerting-section
       .col-sm-12.col-md-8.offset-md-2.text-center
         p.lead-text
           | Keep your team up to date with a generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
-          | notifications. Of course, "double-checking" is enabled by default to never get false positives.
+          | notifications. Control exactly how, when and how often you get alerted. Of course, "double-checking" is enabled by default to never get false positives.
         a.cta-link(href='/docs/alerting') Learn more
         .mb-4.mb-lg-0
     .row
       .col-sm-12.text-center
-        img.alerting-image.img-fluid(src='/landing/alert-settings@2x.png', alt='alerting setting')
+        img.alerting-image.img-fluid(src='/landing/alert-settings-v2@2x.png', alt='alerting settings')
