feat: adds new regions

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -82,7 +82,7 @@ body
                             p Every plan comes with
                         .text-center
                             ul.list-inline.plans-features-common-list
-                                li.list-inline-item 8 regions
+                                li.list-inline-item choose from 16 regions
                                 li.list-inline-item 1m interval for API checks / 5m interval for Browser checks
                                 li.list-inline-item Setup / Teardown scripts & code snippets
                                 li.list-inline-item 1 public dash with a custom domain
