build: more build fixes

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-@import '../../../checkly-webapp/src/style/scss/variables';
+@import './checkly-webapp-src/style/scss/variables';
 
 // colors
 $light-blue: #EBFAFF;
