--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -2,7 +2,7 @@ include  ../partials/head
 body
     include ../partials/navbar.pug
     .main
-        .plans.pt-5
+        .plans.pt-3
             .container
                 .row
                     .col-sm-12.col-md-8.offset-md-2.plans-header.text-center.mb-4
@@ -19,76 +19,85 @@ body
 
                 .row
                     .col-sm-4
-                        .card.p-3.mb-3.mb-md-0.card-starter
+                        .card.p-3.card-starter
                             .card-block
-                                h2.text-accent Starter
+                                strong.text-uppercase.text-accent Starter
+                                .price-block
+                                  span.price(data-starter-price) 24
+                                  span(data-billing-interval) / month
+                                .strike-out-price(data-starter-strikeout-price) $24 / month
                                 table.table.table-sm.plans-features-table
                                     tr
-                                        td 15 API checks
+                                      td.has-feature  15 API checks
                                     tr
-                                        td 5 Browser checks
+                                      td.has-feature  5 Browser checks
                                     tr
-                                        td 5 Team members
+                                      td.has-feature  5 Team members
                                     tr
-                                        td 50 SMS credits
-                                .price-block
-                                    span.dollar-sign $
-                                    span.price(data-starter-price) 24
-                                    span(data-billing-interval) / month
-                                .strike-out-price(data-starter-strikeout-price) $24 / month
+                                      td.has-feature  50 SMS credits
+                                    tr
+                                      td.has-feature  16 global data centers
+                                    tr
+                                      td.has-feature  Public dash with a custom domain
+                                    tr
+                                      td.has-feature  SSL checks
+                                    tr
+                                      td.no-feature &nbsp;
                                 a.btn.btn-outline-primary.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
                     .col-sm-4
                         .card.p-3.mb-3.mb-md-0.card-growth.big-drop-shadow
                             .card-block
-                                h2.text-success Growth
+                                strong.text-uppercase.text-success Growth
+                                .price-block
+                                  span.price(data-growth-price) 59
+                                  span(data-billing-interval) / month
+                                .strike-out-price(data-growth-strikeout-price) $59 / month
                                 table.table.table-sm.plans-features-table
                                     tr
-                                        td 40 API checks
+                                      td.has-feature
+                                        strong All starter features
                                     tr
-                                        td 15 Browser checks
+                                        td.has-feature 40 API checks
                                     tr
-                                        td 10 Team members
+                                      td.has-feature  10 Browser checks
                                     tr
-                                      td 150 SMS credits
-                                .price-block
-                                    span.dollar-sign $
-                                    span.price(data-growth-price) 59
-                                    span(data-billing-interval) / month
-                                .strike-out-price(data-growth-strikeout-price) $59 / month
+                                      td.has-feature  10 Team members
+                                    tr
+                                      td.has-feature  150 SMS credits
+                                    tr
+                                      td.has-feature  Pagerduty integration
+                                    tr
+                                      td.has-feature  Prometheus integration
+                                    tr
+                                      td.has-feature  Setup / Teardown scripts
                                 a.btn.btn-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
                     .col-sm-4
                         .card.p-3.mb-3.mb-md-0.card-business
                             .card-block
-                                h2.text-primary Business
-
+                                strong.text-uppercase.text-primary Business
+                                .price-block
+                                  span.price(data-business-price) 119
+                                  span(data-billing-interval) / month
+                                .strike-out-price(data-business-strikeout-price) $119 / month
                                 table.table.table-sm.plans-features-table
                                     tr
-                                        td 100 API checks
+                                      td.has-feature
+                                        strong All growth features
                                     tr
-                                        td 30 Browser checks
+                                      td.has-feature  100 API checks
                                     tr
-                                        td 20 Team members
+                                      td.has-feature  20 Browser checks
                                     tr
-                                      td 300 SMS credits
-                                .price-block
-                                    span.dollar-sign $
-                                    span.price(data-business-price) 119
-                                    span(data-billing-interval) / month
-                                .strike-out-price(data-business-strikeout-price) $119 / month
+                                      td.has-feature  20 Team members
+                                    tr
+                                      td.has-feature  300 SMS credits
+                                    tr
+                                      td.has-feature  SSO / SAML authentication
+                                    tr
+                                      td.no-feature &nbsp;
+                                    tr
+                                      td.no-feature &nbsp;
                                 a.btn.btn-outline-primary.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
-                .row.pt-5
-                    .col-sm-12
-                        .text-center
-                            p Every plan comes with
-                        .text-center
-                            ul.list-inline.plans-features-common-list
-                                li.list-inline-item 16 data center locations to choose from
-                                li.list-inline-item 1m interval for API checks / 5m interval for Browser checks
-                                li.list-inline-item Setup / Teardown scripts & code snippets
-                                li.list-inline-item 1 public dash with a custom domain
-                                li.list-inline-item SSL expiration checks
-                                li.list-inline-item Pagerduty, SMS, email, webhook and Slack integration
-                                li.list-inline-item Weekly summary email
                 .row
                     .col-sm-12.text-center
                         h2.py-5 Pricing FAQ
