--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -76,7 +76,7 @@
 
     li {
       margin-bottom: .5 * $spacer-y;
-      line-height: $line-height-pub-site;
+      line-height: 22px;
     }
   }
 
