--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -1,16 +1,18 @@
-include  partials/head
-body.fixed-top-padding
-    include partials/navbar.pug
-    .main
-        #landing.landing
-            include partials/hero-section.pug
-            include partials/api-monitoring-section.pug
-            include partials/site-monitoring-section.pug
-            include partials/alerting-section.pug
-            include partials/results-section.pug
-            include partials/trusted-by-section.pug
-            include partials/testimonial-trial-row.pug
-            include partials/all-features.pug
-            include partials/tweets.pug
-            include partials/public-stats-section.pug
-    include partials/footer.pug
+doctype html
+html(lang='en')
+    | !{'{{ partial "head" . }}'}
+    body.fixed-top-padding
+        include partials/navbar.pug
+        .main
+            #landing.landing
+                include partials/hero-section.pug
+                include partials/api-monitoring-section.pug
+                include partials/site-monitoring-section.pug
+                include partials/alerting-section.pug
+                include partials/results-section.pug
+                include partials/trusted-by-section.pug
+                include partials/testimonial-trial-row.pug
+                include partials/all-features.pug
+                include partials/tweets.pug
+                include partials/public-stats-section.pug
+        include partials/footer.pug
