--- a/src/layouts/partials/head.pug
+++ b/src/layouts/partials/head.pug
@@ -21,7 +21,7 @@ html(lang='en')
         meta(name='msvalidate.01' content='36F243A91FAA24DE468D8A8EECF33554')
 
         link(href='https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700' rel='stylesheet')
-
+        link(rel='stylesheet' href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css")
         link(rel='icon' type='image/png' href='/images/racoon_favicon.png')
         link(rel='alternate' href='{{ .Permalink }}' hreflang='en-us')
         link(rel='canonical' href='{{ .Permalink }}')
