docs: shorten texts

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -84,10 +84,10 @@ body
                       .pt-text Check interval
                       .pt-value
                         span.pt-tooltip-show-text
-                          span.pt-tooltip-show 1 minute / 30 minutes
+                          span.pt-tooltip-show 1 min / 30 min
                           span.pt-tooltip
                             span.pt-tooltip-content
-                             | API checks can be scheduled every minute, browser checks every 30 minutes.
+                             | API checks can be scheduled every minute, browser checks every 30 min.
                     .pt-list-item
                       .pt-text
                         | Team members
@@ -171,10 +171,10 @@ body
                       .pt-text Check interval
                       .pt-value
                         span.pt-tooltip-show-text
-                          span.pt-tooltip-show 1 minute / 10 minutes
+                          span.pt-tooltip-show 1 min / 10 min
                           span.pt-tooltip
                             span.pt-tooltip-content
-                              | API checks can be scheduled every minute, browser checks every 10 minutes.
+                              | API checks can be scheduled every minute, browser checks every 10 min.
                     .pt-list-item
                       .pt-text
                         | Team members
@@ -258,10 +258,10 @@ body
                       .pt-text Check interval
                       .pt-value
                         span.pt-tooltip-show-text
-                          span.pt-tooltip-show 1 minute / 10 minutes
+                          span.pt-tooltip-show 1 min / 10 min
                           span.pt-tooltip
                             span.pt-tooltip-content
-                              | API checks can be scheduled every minute, browser checks every 10 minutes.
+                              | API checks can be scheduled every minute, browser checks every 10 min.
                     .pt-list-item
                       .pt-text
                         | Team members
@@ -345,10 +345,10 @@ body
                       .pt-text Check interval
                       .pt-value
                         span.pt-tooltip-show-text
-                          span.pt-tooltip-show 1 minute / 5 minutes
+                          span.pt-tooltip-show 1 min / 5 min
                           span.pt-tooltip
                             span.pt-tooltip-content
-                              | API checks can be scheduled every minute, browser checks every 5 minutes.
+                              | API checks can be scheduled every minute, browser checks every 5 min.
                     .pt-list-item
                       .pt-text
                         | Team members
