style: multiple tweaks to pricing and hero text

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -79,6 +79,7 @@ body
                       span.price(data-developer-price) 7
                       span(data-billing-interval) / month
                     .strike-out-price(data-developer-strikeout-price) $7 / month
+                  p Get started with powerful API and site monitoring
                   .pt-list
                     .pt-list-item
                       .pt-text
@@ -89,7 +90,7 @@ body
                       .pt-text
                         | Browser checks
                       .pt-value
-                        | 2
+                        | 1
                     .pt-list-item
                       .pt-text Check interval
                       .pt-value
@@ -170,6 +171,7 @@ body
                       span.price(data-starter-price) 29
                       span(data-billing-interval) / month
                     .strike-out-price(data-starter-strikeout-price) $29 / month
+                  p Everything. Enough to power any young business
                   .pt-list
                     .pt-list-item
                       .pt-text
@@ -188,7 +190,7 @@ body
                           span.pt-tooltip-show 1 min / 10 min
                           span.pt-tooltip
                             span.pt-tooltip-content
-                              | API checks can be scheduled every minute, browser checks every 10 min.
+                              | API checks can be scheduled every minute, browser checks every 10 min
                     .pt-list-item
                       .pt-text
                         | Team members
@@ -262,6 +264,7 @@ body
                       span.price(data-growth-price) 75
                       span(data-billing-interval) / month
                     .strike-out-price(data-growth-strikeout-price) $75 / month
+                  p Everything + growing room for new apps and projects
                   .pt-list
                     .pt-list-item
                       .pt-text
@@ -280,7 +283,7 @@ body
                           span.pt-tooltip-show 1 min / 10 min
                           span.pt-tooltip
                             span.pt-tooltip-content
-                              | API checks can be scheduled every minute, browser checks every 10 min.
+                              | API checks can be scheduled every minute, browser checks every 10 min
                     .pt-list-item
                       .pt-text
                         | Team members
@@ -354,6 +357,7 @@ body
                       span.price(data-business-price) 199
                       span(data-billing-interval) / month
                     .strike-out-price(data-business-strikeout-price) $199 / month
+                  p Keeps the enterprise purring like a kitten.
                   .pt-list
                     .pt-list-item
                       .pt-text
@@ -372,7 +376,7 @@ body
                           span.pt-tooltip-show 1 min / 10 min
                           span.pt-tooltip
                             span.pt-tooltip-content
-                              | API checks can be scheduled every minute, browser checks every 5 min.
+                              | API checks can be scheduled every minute, browser checks every 5 min
                     .pt-list-item
                       .pt-text
                         | Team members
