--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -17,8 +17,8 @@
 
   .hero-sub {
     font-weight: 300;
-    font-size: 1.3rem;
-    line-height: 2rem;
+    font-size: 1.2rem;
+    line-height: 2rem !important;
     margin-bottom: 1rem;
     color: $body-text;
   }
