feat: trial period to 14 days

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -171,7 +171,7 @@ body
                       span.price(data-starter-price) 29
                       span(data-billing-interval) / month
                     .strike-out-price(data-starter-strikeout-price) $29 / month
-                  p Everything. Enough to power any young business
+                  p Everything. Enough to power any young company
                   .pt-list
                     .pt-list-item
                       .pt-text
