style: spruce up landing page

--- a/src/layouts/partials/api-monitoring-section.pug
+++ b/src/layouts/partials/api-monitoring-section.pug
@@ -14,5 +14,5 @@ section.api-monitoring-section
           a.cta-link(href='/product/api-monitoring/') Learn more
       .col-sm-6.offset-sm-1
         .image-side.right
-          img.screen-image.big-landing-image.assertions.fade-in.ml-md-5.lazy(src='/landing/api-assertions@2x.png', alt='api monitoring')
-          img.screen-image.big-landing-image.results.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/api-results@2x.png', alt='api monitoring')
+          img.big-landing-image.big-drop-shadow.assertions.fade-in.ml-md-5.lazy(src='/landing/api-assertions@2x.png', alt='api monitoring')
+          img.big-landing-image.big-drop-shadow.results.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/api-results@2x.png', alt='api monitoring')
