--- a/src/layouts/partials/site-monitoring-section.pug
+++ b/src/layouts/partials/site-monitoring-section.pug
@@ -14,5 +14,5 @@ section.site-monitoring-section
           a.cta-link(href='/product/transaction-monitoring/') Learn more
       .col-sm-6.offset-sm-1
         .image-side.right
-          img.screen-image.big-landing-image.code.fade-in.ml-md-5.lazy(src='/landing/browser-code@2x.png' alt='site transaction monitoring')
-          img.screen-image.big-landing-image.screenshots.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/browser-screenshots@2x.png', alt='site transaction monitoring')
+          img.big-landing-image.big-drop-shadow.code.fade-in.ml-md-5.lazy(src='/landing/browser-code@2x.png' alt='site transaction monitoring')
+          img.big-landing-image.big-drop-shadow.screenshots.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/browser-screenshots@2x.png', alt='site transaction monitoring')
