--- a/src/scss/sections/_site-monitoring.scss
+++ b/src/scss/sections/_site-monitoring.scss
@@ -4,7 +4,7 @@
   padding-top: 3 * $section-top-padding;
   padding-bottom: 3 * $section-bottom-padding;
   height: 640px;
-  background-color: $light-blue;
+  background: $ash;
   overflow: hidden;
 
   img.code {
