--- a/src/layouts/partials/alerting-section.pug
+++ b/src/layouts/partials/alerting-section.pug
@@ -3,7 +3,7 @@ section.alerting-section
     .row.mb-lg-4
       .col-sm-12.text-center
         h2.section-super-header Alerting
-        h3.section-header.mb-4 Alerting without limits
+        h3.section-header.mb-4 Alerting when and how you want it
         img.img-w360.mb-4(src='/landing/alerting-options@2x.png', alt='alert notification channels')
       .col-sm-12.col-md-8.offset-md-2.text-center
         p.lead-text
@@ -13,4 +13,4 @@ section.alerting-section
         .mb-4.mb-lg-0
     .row
       .col-sm-12.text-center
-        img.alerting-image.img-fluid(src='/landing/alert-settings-v2@2x.png', alt='alerting settings')
+        img.alerting-image.big-drop-shadow.img-fluid(src='/landing/alert-settings-v2@2x.png', alt='alerting settings')
