--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -24,7 +24,7 @@
     font-size: 1rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-normal;
     padding-bottom: .3em;
     &::before {
       content: "#" !important;
