--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -12,8 +12,6 @@ section {
     font-weight: 600;
     letter-spacing: 1.2px;
     color: $gray;
-    border-bottom: 2px solid $gray-light;
-    padding-bottom: .8rem;
     font-size: .7rem;
     text-transform: uppercase;
     margin-bottom: .6rem;
@@ -22,6 +20,7 @@ section {
 
   .section-header {
     font-size: 2rem;
+    font-weight: 300;
   }
 
   @include media-breakpoint-down(sm) {
