--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -11,7 +11,7 @@ section {
   .section-super-header{
     font-weight: 600;
     letter-spacing: 1.2px;
-    color: $gray;
+    color: $gray-darkish;
     font-size: .7rem;
     text-transform: uppercase;
     margin-bottom: .6rem;
