style: small color tweaks

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -34,7 +34,7 @@ p {
 
 .cta-link {
   color: $brand-primary;
-  font-weight: $font-weight-normal;
+  font-weight: 400;
   text-decoration: none;
   &:hover {
     text-decoration: none;
