--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -14,7 +14,7 @@ section {
     color: $gray-darkish;
     font-size: .7rem;
     text-transform: uppercase;
-    margin-bottom: .6rem;
+    margin-bottom: 1rem;
     display: inline-block;
   }
 
