--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -32,7 +32,7 @@ footer.footer
                         li
                             a(href='/about') About us
                         li
-                            a(href='/terms') Terms & conditions
+                            a(href='/terms') Terms of Use
                         li
                             a(href='/privacy') Privacy policy
             .col-sm-5
