--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -70,6 +70,24 @@
       padding: 0.5rem .75rem;
     }
   }
+
+  .create-check-dropdown-item {
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    padding: .5 * $spacer-y 0;
+
+    .check-icon {
+      display: flex;
+      i {
+        align-self: center;
+        display: inline-block;
+        height: 30px;
+        width: 30px;
+        margin-right: $spacer-x;
+      }
+    }
+  }
 }
 
 .home-nav-wrapper {
