--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -24,7 +24,7 @@
     font-size: 1rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
-    font-weight: $font-weight-normal;
+    font-weight: 400;
     padding-bottom: .3em;
     &::before {
       content: "#" !important;
@@ -76,7 +76,7 @@
 
     li {
       margin-bottom: .5 * $spacer-y;
-      line-height: 22px;
+      line-height: 26px;
     }
   }
 
